Added files for the server. If you want to build these files, you must install openssl via the vcpkg manager. I will be making a runtime build that will be available to us for troubleshooting when signup/login is implemented in the server command set

--- a/ServerPackage/ServerPackage.vcxproj
+++ b/ServerPackage/ServerPackage.vcxproj
@@ -131,10 +131,12 @@
   <ItemGroup>
     <ClCompile Include="CommandSet.cpp" />
     <ClCompile Include="ServerPackage.cpp" />
+    <ClCompile Include="User.cpp" />
     <ClCompile Include="WindowsServer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CommandSet.h" />
+    <ClInclude Include="User.h" />
     <ClInclude Include="WindowsServer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
