--- a/ServerPackage/ServerPackage.vcxproj.filters
+++ b/ServerPackage/ServerPackage.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="CommandSet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="User.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WindowsServer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CommandSet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="User.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
