--- a/ServerPackage/ServerPackage.vcxproj
+++ b/ServerPackage/ServerPackage.vcxproj
@@ -136,6 +136,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CommandSet.h" />
+    <ClInclude Include="Constants.h" />
     <ClInclude Include="User.h" />
     <ClInclude Include="WindowsServer.h" />
   </ItemGroup>
