--- a/ServerPackage/ServerPackage.vcxproj
+++ b/ServerPackage/ServerPackage.vcxproj
@@ -140,6 +140,9 @@
     <ClInclude Include="User.h" />
     <ClInclude Include="WindowsServer.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitignore" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
