Login is 75% complete. Need implementation to SQL to remove hardcoded test values. The variables that need to be removed are named remove... Debug. We now have the ability to manage logged in users and directly communicate with users.

--- a/ServerPackage/ServerPackage.vcxproj
+++ b/ServerPackage/ServerPackage.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="Constants.h" />
     <ClInclude Include="User.h" />
     <ClInclude Include="WindowsServer.h" />
+    <ClInclude Include="WindowsUserPair.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
