Refactored the WindowsServer.cpp and created the WindowsInterpreter.cpp. WindowsInterpreter is handling logic with built out functions to reduce the amount of code that could need rewritten. This file also brings in the CommandSet.h file and I removed the interpret request from command set and put a similiar one into WindowsInterpreter.cpp.

--- a/ServerPackage/ServerPackage.vcxproj
+++ b/ServerPackage/ServerPackage.vcxproj
@@ -132,12 +132,14 @@
     <ClCompile Include="CommandSet.cpp" />
     <ClCompile Include="ServerPackage.cpp" />
     <ClCompile Include="User.cpp" />
+    <ClCompile Include="WindowsInterpreter.cpp" />
     <ClCompile Include="WindowsServer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CommandSet.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="User.h" />
+    <ClInclude Include="WindowsInterpreter.h" />
     <ClInclude Include="WindowsServer.h" />
     <ClInclude Include="WindowsUserPair.h" />
   </ItemGroup>
