--- a/ServerPackage/ServerPackage.vcxproj.filters
+++ b/ServerPackage/ServerPackage.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="User.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WindowsInterpreter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WindowsServer.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WindowsUserPair.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WindowsInterpreter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
