--- a/ServerPackage/ServerPackage.vcxproj
+++ b/ServerPackage/ServerPackage.vcxproj
@@ -130,6 +130,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CommandSet.cpp" />
+    <ClCompile Include="DiscussionPost.cpp" />
     <ClCompile Include="ServerPackage.cpp" />
     <ClCompile Include="SQLInterface.cpp" />
     <ClCompile Include="User.cpp" />
@@ -140,6 +141,7 @@
     <ClInclude Include="CommandSet.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="db_credentials.h" />
+    <ClInclude Include="DiscussionPost.h" />
     <ClInclude Include="SQLInterface.h" />
     <ClInclude Include="User.h" />
     <ClInclude Include="WindowsInterpreter.h" />
