Tied to the database, need to test to ensure I am actually reaching it.

--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,6 @@ local.properties
 *x64
 /.vs
 /ServerTest/TestConfigForServer/.vs
-/ServerPackage/db_credentials.h
+./ServerPackage/db_credentials.h
+./ServerPackage/*.env
+*.env
