--- a/ServerPackage/ServerPackage.vcxproj.filters
+++ b/ServerPackage/ServerPackage.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClInclude Include="SQLInterface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TokenHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
