Moved the Tokenizer methods to a .cpp file as it exceeded its original scope.

--- a/ServerPackage/ServerPackage.vcxproj.filters
+++ b/ServerPackage/ServerPackage.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="FileOps.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TokenHelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WindowsServer.h">
