--- a/ServerPackage/ServerPackage.vcxproj
+++ b/ServerPackage/ServerPackage.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="FileOps.cpp" />
     <ClCompile Include="ServerPackage.cpp" />
     <ClCompile Include="SQLInterface.cpp" />
+    <ClCompile Include="TokenHelper.cpp" />
     <ClCompile Include="User.cpp" />
     <ClCompile Include="WindowsInterpreter.cpp" />
     <ClCompile Include="WindowsServer.cpp" />
