Added header manager

--- a/ServerPackage/ServerPackage.vcxproj
+++ b/ServerPackage/ServerPackage.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="CommandSet.cpp" />
     <ClCompile Include="DiscussionPost.cpp" />
     <ClCompile Include="FileOps.cpp" />
+    <ClCompile Include="Header.cpp" />
     <ClCompile Include="ServerPackage.cpp" />
     <ClCompile Include="SQLInterface.cpp" />
     <ClCompile Include="TokenHelper.cpp" />
@@ -144,6 +145,7 @@
     <ClInclude Include="Constants.h" />
     <ClInclude Include="DiscussionPost.h" />
     <ClInclude Include="FileOps.h" />
+    <ClInclude Include="Header.h" />
     <ClInclude Include="SQLInterface.h" />
     <ClInclude Include="TokenHelper.h" />
     <ClInclude Include="User.h" />
