--- a/ServerPackage/ServerPackage.vcxproj
+++ b/ServerPackage/ServerPackage.vcxproj
@@ -130,10 +130,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ActiveUsers.cpp" />
+    <ClCompile Include="Challenge.cpp" />
     <ClCompile Include="CommandSet.cpp" />
     <ClCompile Include="DiscussionPost.cpp" />
     <ClCompile Include="FileOps.cpp" />
     <ClCompile Include="Header.cpp" />
+    <ClCompile Include="Rooms.cpp" />
     <ClCompile Include="ServerPackage.cpp" />
     <ClCompile Include="SQLInterface.cpp" />
     <ClCompile Include="TokenHelper.cpp" />
@@ -143,11 +145,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ActiveUsers.h" />
+    <ClInclude Include="Challenge.h" />
     <ClInclude Include="CommandSet.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="DiscussionPost.h" />
     <ClInclude Include="FileOps.h" />
     <ClInclude Include="Header.h" />
+    <ClInclude Include="Rooms.h" />
     <ClInclude Include="SQLInterface.h" />
     <ClInclude Include="TokenHelper.h" />
     <ClInclude Include="User.h" />
