--- a/ServerPackage/ServerPackage.vcxproj.filters
+++ b/ServerPackage/ServerPackage.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="Challenge.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Challenges.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WindowsServer.h">
@@ -96,6 +99,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Challenge.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Challenges.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
